{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 120,
  "lineage": "2a0feb60-58b1-0821-3d12-0c047c8fe43b",
  "resources": [
    {
      "module": "module.Elastic_IP_module[\"eip01\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bb65cabd3ac3d227",
            "association_id": "eipassoc-0b90a9faf6524c725",
            "domain": "vpc",
            "id": "eipalloc-0bb65cabd3ac3d227",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c9f4af776ae0d2c9",
            "private_dns": "ip-192-168-31-113.ec2.internal",
            "private_ip": "192.168.31.113",
            "public_dns": "ec2-100-25-69-189.compute-1.amazonaws.com",
            "public_ip": "100.25.69.189",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat01"
            },
            "tags_all": {
              "Name": "nat01"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.Elastic_IP_module[\"eip02\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ae1570504e86ff77",
            "association_id": "eipassoc-0dc2d7cb5b211ea7b",
            "domain": "vpc",
            "id": "eipalloc-0ae1570504e86ff77",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09219843c4f32d81c",
            "private_dns": "ip-192-168-117-164.ec2.internal",
            "private_ip": "192.168.117.164",
            "public_dns": "ec2-44-217-250-45.compute-1.amazonaws.com",
            "public_ip": "44.217.250.45",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat02"
            },
            "tags_all": {
              "Name": "nat02"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.NATGW_module[\"natgw01\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bb65cabd3ac3d227",
            "association_id": "eipassoc-0b90a9faf6524c725",
            "connectivity_type": "public",
            "id": "nat-0128a258698849455",
            "network_interface_id": "eni-0c9f4af776ae0d2c9",
            "private_ip": "192.168.31.113",
            "public_ip": "100.25.69.189",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-053b3018b9d7f1040",
            "tags": {
              "Name": "natGW01"
            },
            "tags_all": {
              "Name": "natGW01"
            }
          },
          "dependencies": [
            "module.Elastic_IP_module.aws_eip.nat",
            "module.aws_subnet.aws_subnet.main",
            "module.vpc_modules.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.NATGW_module[\"natgw02\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ae1570504e86ff77",
            "association_id": "eipassoc-0dc2d7cb5b211ea7b",
            "connectivity_type": "public",
            "id": "nat-050fccad492cf54a8",
            "network_interface_id": "eni-09219843c4f32d81c",
            "private_ip": "192.168.117.164",
            "public_ip": "44.217.250.45",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-088979663428a48a3",
            "tags": {
              "Name": "natGW02"
            },
            "tags_all": {
              "Name": "natGW02"
            }
          },
          "dependencies": [
            "module.Elastic_IP_module.aws_eip.nat",
            "module.aws_subnet.aws_subnet.main",
            "module.vpc_modules.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_subnet[\"private-us-east-1a\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:807346150145:subnet/subnet-07fa22fd6fa33ce77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07fa22fd6fa33ce77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "807346150145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1a"
            },
            "tags_all": {
              "Name": "private-us-east-1a"
            },
            "vpc_id": "vpc-0c9b09f6eee8178dc"
          },
          "dependencies": [
            "module.vpc_modules.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_subnet[\"private-us-east-1b\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:807346150145:subnet/subnet-0ae657b9e64c468d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.192.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae657b9e64c468d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "807346150145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1b"
            },
            "tags_all": {
              "Name": "private-us-east-1b"
            },
            "vpc_id": "vpc-0c9b09f6eee8178dc"
          },
          "dependencies": [
            "module.vpc_modules.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_subnet[\"public-us-east-1a\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:807346150145:subnet/subnet-053b3018b9d7f1040",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053b3018b9d7f1040",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "807346150145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1a"
            },
            "tags_all": {
              "Name": "public-us-east-1a"
            },
            "vpc_id": "vpc-0c9b09f6eee8178dc"
          },
          "dependencies": [
            "module.vpc_modules.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aws_subnet[\"public-us-east-1b\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:807346150145:subnet/subnet-088979663428a48a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088979663428a48a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "807346150145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1b"
            },
            "tags_all": {
              "Name": "public-us-east-1b"
            },
            "vpc_id": "vpc-0c9b09f6eee8178dc"
          },
          "dependencies": [
            "module.vpc_modules.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.internetGW_module[\"igw01\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:807346150145:internet-gateway/igw-090f760dec52d9037",
            "id": "igw-090f760dec52d9037",
            "owner_id": "807346150145",
            "tags": {
              "Name": "my_igw"
            },
            "tags_all": {
              "Name": "my_igw"
            },
            "vpc_id": "vpc-0c9b09f6eee8178dc"
          },
          "dependencies": [
            "module.vpc_modules.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association_module[\"RT01Assoc\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6c2d48eec76bd35",
            "route_table_id": "rtb-0726146bba0cb2f9a",
            "subnet_id": "subnet-053b3018b9d7f1040"
          },
          "dependencies": [
            "module.Elastic_IP_module.aws_eip.nat",
            "module.NATGW_module.aws_nat_gateway.gw",
            "module.aws_subnet.aws_subnet.main",
            "module.internetGW_module.aws_internet_gateway.gw",
            "module.route_table_module.aws_route_table.example",
            "module.vpc_modules.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association_module[\"RT02Assoc\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04fb9692ed2a97ff8",
            "route_table_id": "rtb-0726146bba0cb2f9a",
            "subnet_id": "subnet-088979663428a48a3"
          },
          "dependencies": [
            "module.Elastic_IP_module.aws_eip.nat",
            "module.NATGW_module.aws_nat_gateway.gw",
            "module.aws_subnet.aws_subnet.main",
            "module.internetGW_module.aws_internet_gateway.gw",
            "module.route_table_module.aws_route_table.example",
            "module.vpc_modules.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association_module[\"RT03Assoc\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db1a3b7af87e3217",
            "route_table_id": "rtb-0d21bbdb8d4ef686f",
            "subnet_id": "subnet-07fa22fd6fa33ce77"
          },
          "dependencies": [
            "module.Elastic_IP_module.aws_eip.nat",
            "module.NATGW_module.aws_nat_gateway.gw",
            "module.aws_subnet.aws_subnet.main",
            "module.internetGW_module.aws_internet_gateway.gw",
            "module.route_table_module.aws_route_table.example",
            "module.vpc_modules.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association_module[\"RT04Assoc\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc6621bc2921651a",
            "route_table_id": "rtb-0cbcdbd2870871062",
            "subnet_id": "subnet-0ae657b9e64c468d5"
          },
          "dependencies": [
            "module.Elastic_IP_module.aws_eip.nat",
            "module.NATGW_module.aws_nat_gateway.gw",
            "module.aws_subnet.aws_subnet.main",
            "module.internetGW_module.aws_internet_gateway.gw",
            "module.route_table_module.aws_route_table.example",
            "module.vpc_modules.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_module[\"RT01\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:807346150145:route-table/rtb-0726146bba0cb2f9a",
            "id": "rtb-0726146bba0cb2f9a",
            "owner_id": "807346150145",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-090f760dec52d9037",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-Route"
            },
            "tags_all": {
              "Name": "Public-Route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9b09f6eee8178dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Elastic_IP_module.aws_eip.nat",
            "module.NATGW_module.aws_nat_gateway.gw",
            "module.aws_subnet.aws_subnet.main",
            "module.internetGW_module.aws_internet_gateway.gw",
            "module.vpc_modules.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_module[\"RT02\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:807346150145:route-table/rtb-0d21bbdb8d4ef686f",
            "id": "rtb-0d21bbdb8d4ef686f",
            "owner_id": "807346150145",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0128a258698849455",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-Route"
            },
            "tags_all": {
              "Name": "Private-Route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9b09f6eee8178dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Elastic_IP_module.aws_eip.nat",
            "module.NATGW_module.aws_nat_gateway.gw",
            "module.aws_subnet.aws_subnet.main",
            "module.internetGW_module.aws_internet_gateway.gw",
            "module.vpc_modules.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_module[\"RT03\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:807346150145:route-table/rtb-0cbcdbd2870871062",
            "id": "rtb-0cbcdbd2870871062",
            "owner_id": "807346150145",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-050fccad492cf54a8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-Route"
            },
            "tags_all": {
              "Name": "Private-Route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9b09f6eee8178dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Elastic_IP_module.aws_eip.nat",
            "module.NATGW_module.aws_nat_gateway.gw",
            "module.aws_subnet.aws_subnet.main",
            "module.internetGW_module.aws_internet_gateway.gw",
            "module.vpc_modules.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_modules[\"vpc01\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:807346150145:vpc/vpc-0c9b09f6eee8178dc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-08615fe1e120d1879",
            "default_route_table_id": "rtb-0e13f3b7b164e1417",
            "default_security_group_id": "sg-04ac0388ed304e78a",
            "dhcp_options_id": "dopt-0f3f8230f97937615",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c9b09f6eee8178dc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e13f3b7b164e1417",
            "owner_id": "807346150145",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    }
  ]
}